@@ -1,4 +1,3 @@
 LFSWM2 has now replaced LFSWmanager and is pretty much done.
 
 TODO
-Switch desktops via mouse thumb wheeel.
