@@ -1,4 +1,6 @@
 1.0.0
+Fixed changing themes.
+Fixed reload modifier keys.
 Done dragging window off left/right edge of screen changes current desktop.
 Fixed 'ESC+MOVEKEYS' getting wrong key.
 Fixed 'above/Below' fom window menu button.
